// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShieldBadge > snapshot testing > matches snapshot with custom className 1`] = `
<img
  alt="Snapshot"
  class="inline-block h-6 rounded custom"
  decoding="async"
  loading="lazy"
  src="test.svg"
  whiletap="[object Object]"
/>
`;

exports[`ShieldBadge > snapshot testing > matches snapshot with href 1`] = `
<a
  class="inline-block relative focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 focus-visible:ring-offset-2 focus-visible:ring-offset-bg-primary rounded"
  href="https://example.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="absolute -inset-1 bg-primary/10 blur-sm -z-10 rounded"
  />
  <img
    alt="Snapshot"
    class="inline-block h-6 rounded "
    decoding="async"
    loading="lazy"
    src="test.svg"
    whiletap="[object Object]"
  />
</a>
`;

exports[`ShieldBadge > snapshot testing > matches snapshot without href 1`] = `
<img
  alt="Snapshot"
  class="inline-block h-6 rounded "
  decoding="async"
  loading="lazy"
  src="test.svg"
  whiletap="[object Object]"
/>
`;
